# Instructify

./: .gitignore  .pre-commit-config.yaml  Instructify.modelfile  README.md
.github/workflows/: ci-cd.yml  deploy.yml
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/services/: gemini_client.py  ollama_client.py  transcription_service.py
backend/app/utils/: auth.py
backend/app/websockets/: chat_handler.py  room_manager.py
frontend/: .eslintrc.json  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/classroom/[id]/: ClassroomContent.tsx  page.tsx
frontend/app/components/: LiveCaptions.tsx  VoiceTranscription.tsx  Whiteboard.tsx
frontend/app/student/: page.tsx
frontend/app/teacher/: page.tsx
frontend/types/: speech-recognition.d.ts
scripts/: ci-local.sh
